config/app-api.yml
apiVersion: v1
kind: Namespace
metadata:
  name: tallinn-transport-ns
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tallinn-transport-api-dep
  labels:
    app: tallinn-transport-api
  namespace: tallinn-transport-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tallinn-transport-api
  template:
    metadata:
      labels:
        app: tallinn-transport-api
    spec:
      containers:
        - name: tallinn-transport-api
          image: <IMAGE>
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: tallinn-transport-api-svc
  labels:
    app: tallinn-transport-api
  namespace: tallinn-transport-ns
spec:
  type: LoadBalancer
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: tallinn-transport-api
