config/app-web.yml
apiVersion: v1
kind: Namespace
metadata:
  name: tallinn-transport-ns
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tallinn-transport-web-dep
  labels:
    app: tallinn-transport-web
  namespace: tallinn-transport-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tallinn-transport-web
  template:
    metadata:
      labels:
        app: tallinn-transport-web
    spec:
      containers:
        - name: tallinn-transport-web
          image: <IMAGE>
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: tallinn-transport-web-svc
  labels:
    app: tallinn-transport-web
  namespace: tallinn-transport-ns
spec:
  type: LoadBalancer
  ports:
    - port: 8000
      targetPort: 80
      protocol: TCP
  selector:
    app: tallinn-transport-web
