config/app-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: tallinn-transport-ingress
  namespace: tallinn-transport-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: ttm.lafin.me
      http:
        paths:
          - path: /api$
            backend:
              serviceName: tallinn-transport-api-svc
              servicePort: 3000
          - path: /(.*)
            backend:
              serviceName: tallinn-transport-web-svc
              servicePort: 8000
